[package]
name = "matrixmul"
version = "0.1.0"
authors = ["Lianke Qin <lianke.qin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.13", features = ["blas"] }
tch = "0.1.6"
rayon = "1.3.0"

